# the_noiseless_newspaper

./: .gitignore  QUICKSTART.md  README.md
backend/: .env.example  README.md  pyproject.toml  railway.json  requirements.txt
backend/app/: __init__.py  auth.py  config.py  main.py
backend/app/api/: routes.py
backend/app/core/: taxonomy.py
backend/app/db/: schema.sql
backend/app/jobs/: daily_ingestion.py
backend/app/models/: database.py  domain.py
backend/app/services/: __init__.py  citation_graph.py  embeddings.py  feature_extraction.py  ranking.py  summarization.py  survival_model.py
backend/app/services/data_ingestion/: __init__.py  aggregator.py  arxiv.py  base.py  pubmed.py  rate_limiter.py  rss.py  scheduler.py  semantic_scholar.py
backend/app/sources/: __init__.py  arxiv.py  base.py  mock.py  newsapi.py  openalex.py  semantic_scholar.py
backend/scripts/: ingest.py
backend/tests/: test_ingestion.py
docs/: DATA_SOURCES.md  DATA_SOURCES_EXPANDED.md  DEPLOYMENT_ROADMAP.md  EXPANDED_TOPICS.md  SURVIVAL_PREDICTION_MODEL.md
frontend/: index.html  noiseless-newspaper.jsx
