[project]
name = "noiseless-newspaper-backend"
version = "0.1.0"
description = "Backend API for The Noiseless Newspaper - A curated news aggregator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Noiseless Newspaper Team" }
]
keywords = ["news", "aggregator", "ranking", "fastapi"]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "networkx>=3.2.1",
    "httpx>=0.26.0",
    "numpy>=1.26.3",
    "scikit-learn>=1.4.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "apscheduler>=3.10.4",
    "structlog>=24.1.0",
    "tenacity>=8.2.3",
    "anthropic>=0.18.0",
    "openai>=1.10.0",
    "python-dotenv>=1.0.0",
    "alembic>=1.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
