[project]
name = "noiseless-backend"
version = "0.1.0"
description = "The Noiseless Newspaper - Retrieval and Ranking Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Database
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",
    "aiosqlite>=0.19.0",  # Async SQLite for dev
    "asyncpg>=0.29.0",     # Async PostgreSQL for prod

    # HTTP clients
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",

    # ML / Embeddings
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "sentence-transformers>=2.3.0",  # Local embeddings fallback

    # Graph algorithms
    "networkx>=3.2.0",

    # Task scheduling
    "apscheduler>=3.10.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",  # Retry logic

    # LLM for summarization
    "anthropic>=0.18.0",
    "openai>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
